Fix spacing

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -89,7 +89,11 @@ button {
   max-width: 100rem;
   h2 {
     margin: 0;
-    margin-bottom: 2rem;
+    margin-bottom: 0 !important;
+  }
+
+  .cta{
+      margin-top: 2rem;
   }
 }
 
@@ -149,12 +153,12 @@ button {
     justify-content: center;
 
     article {
-      max-width: 30rem;
+      max-width: 40rem;
       width: 33%;
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin: 2rem;
+      margin: 1rem;
 
       img {
         width: 10rem;
@@ -164,9 +168,6 @@ button {
         margin-bottom: 1.6rem;
       }
 
-      p {
-        font-size: 1.4rem;
-      }
     }
   }
 }
